make sure background never gets cut off

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ body {
 	padding:50px;
 	margin:50px;
 	@media (max-width: 600px) {
-		padding: 20px;
+		padding: 20px 40px;
 		margin:  20px;
 		width: 90vw;
 	}
